--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,12 @@
 #
 
 # Name of your site (displayed in the header)
-name: Hongzhe Zhou's home page
+name: Hongzhe Zhou's Home Page
 
 # Short bio or description (displayed in the header)
 #description: Hongzhe's home page
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-#avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 avatar: photo.jpeg
 
 #
