--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Hongzhe Zhou's Home Page
 #description: Hongzhe's home page
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: photo.jpeg
+avatar: photo.jpg
 
 #
 # Flags below are optional
